# OrchestratorArchive

./: .gitignore  README.md  deployDjango.sh  deployUserBackend.sh  how c9b36c8fbcdfc9b5ad6b4f3a9e2f3fd94c1bb0b6  manage.py  output_filename.csv  requirements.txt  test.db
MatGraphAI/: .~lock.output_filename.csv#  datadump.json  env  loc.py  manage.py  output_filename.csv  requirements.txt  test.db  user.db  webpack.config.js
MatGraphAI/frontend/: package-lock.json  package.json  user.db
MatGraphAI/importing/: json  (+9 more)
Ontology/: manufacturing.owl  matter.owl  quantities.owl
archivist/: serializer.py
data/: metadata.csv
default/: urls.py  views.py
frontend/: package-lock.json  package.json  tsconfig.json
graphutils/: admin.py  config.py  embeddings.py  general.py  helpers.py  models.py  views.py
importing/: README.md  importer.py  models.py  task_manager.py  tasks.py  urls.py  views.py
mat2devplatform/: .settings.py.swp  .urls.py.swp  asgi.py  celery.py  settings.py  urls.py  wsgi.py
matching/: README.md  admin.py  config.py  fabricationworkflows.py  materials.py  measurements.py  query.cypher  urls.py  views.py
matgraph/: admin.py  models.py  serializers.py
ontologymanagement/: createEmbeddings.py  examples.py  ontologyManager.py  schema.py  setupMessages.py
public/: index.html
sdl/: admin.py  apps.py  models.py  run_automatedCorrosion.py
sdl/Robot/setup/biologic/: .gitattributes  .gitignore  README.md  setup.cfg
static/: index.html
userBackendNodeJS/: app.yaml  package-lock.json  package.json
usermanagement/: admin.py  apps.py  views.py
(+503 files in other folders)
