[metadata]
name = biologic
version = 0.5alpha0
author = Mike Werezak
author_email = mike.werezak@nrcan-rncan.gc.ca
description = Multi-channel potentiostat control system and technique runner for use with BioLogic potentiostats.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.11
install_requires =
package_dir =
packages = find_namespace:

[options.extras_require]

[options.packages.find]
where =
include =
	kbio*
	biologic*

[options.package_data]
kbio = bin/*

[options.entry_points]
console_scripts =
	blfind = biologic.extras.blfind:main
	run_tech = biologic.extras.run_tech:main
